# StrandStorm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  renderdoc_settings.cap
core/: App.cpp  App.hpp  Application.h  Camera.cpp  Camera.hpp  ComputeShader.cpp  ComputeShader.hpp  EntryPoint.cpp  EventHandler.cpp  EventHandler.h  EventHandler.hpp  GUIManager.cpp  GUIManager.h  GUIManager.hpp  Logging.cpp  Logging.hpp  Mesh.cpp  Mesh.hpp  OpenGLProgram.cpp  OpenGLProgram.h  OpenGLProgram.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Scene.cpp  Scene.h  Scene.hpp  Stats.cpp  Stats.hpp  Util.cpp  Util.hpp
physics/: Collider.cpp  Collider.hpp  ElasticRod.cpp  ElasticRod.hpp  PhysicsIntegrator.cpp  PhysicsIntegrator.hpp  VoxelGrid.cpp  VoxelGrid.hpp
shaders/: hair.frag  hair.tesc  hair.tese  hair.vert  hair_gen.comp  hair_shadow.vert  opacity_sh.frag  opacity_sh.vert  shadow.frag  shadow.vert  simple.frag  simple.vert  surface.frag  surface.vert
submodules/glad/include/glad/: glad.h
submodules/glad/src/: glad.c
